--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,14 +9,20 @@
     font-optical-sizing: auto;
 }
 
+@keyframes brilho {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
+  }
+
 .btn-warning-custom{
-    box-shadow: 0px 0px 13px 1px #ffc10775;
-    transition: 0.5s;
+    box-shadow: 0px 0px 13px 1px #ffc107c2;
+    transition: transform 0.5s, box-shadow 0.5s;
+    
     --bs-btn-color: #ffffff;
     --bs-btn-bg: #d6a206;
     --bs-btn-border-color: #d6a206;
     --bs-btn-hover-color: #ffffff;
-    --bs-btn-hover-bg: #ffca2c;
+    --bs-btn-hover-bg: #d6a206;
     --bs-btn-hover-border-color: #ffc720;
     --bs-btn-focus-shadow-rgb: 217, 164, 6;
     --bs-btn-active-color: #dda600;
@@ -37,6 +43,95 @@
     background-color: rgba(245, 245, 245, 0.144)
 }
 
+
+.mh-100vh{
+    min-height: 100vh;
+
+}
+
+.text-content{
+    font-size: 19px;
+    font-weight: lighter;
+    
+}
+
+.headline{
+    font-size: 24px;
+    
+    font-weight:bold;
+}
+
+.sub-headline{
+    font-size: 21px;
+    
+    font-weight:bold;
+}
+
+
+.text-justify{
+    text-align: justify;
+}
+
+.centralize-content{
+    justify-content: center;
+    align-content: center;
+}
+
+.centralize-self{
+    justify-self: center;
+    align-self: center;
+}
+
+.rounded-custom{
+    border-radius: 18px;
+}
+
+
+
+.brilho-animated{
+    animation: 3.4s linear infinite brilho;
+    background-image: linear-gradient(45deg, #c99807, #ffe38e, #c99807, #ffe38e);
+    background-size: 400% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent !important;
+    -webkit-text-fill-color: transparent;
+    will-change: background-position;
+}
+
+.icon {
+    font-size: 3rem;
+    transition: background-position 3s ease-in-out;
+}
+
+.knowledge-headline-bright{
+    transition: background-position 3s ease-in-out;
+
+}
+
+.knowledge-hover{
+    transition: transform 1s, box-shadow 1s;
+}
+
+.knowledge-hover:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px 0px #ffffff4f;
+    
+}
+
+
+.knowledge-hover:hover .icon, 
+.knowledge-hover:hover .knowledge-txt-bright {
+    animation: 3.4s linear infinite brilho;
+    background-image: linear-gradient(45deg, #c99807, #ffeebb, #c99807, #ffeebb);
+    background-size: 400% 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent !important;
+    -webkit-text-fill-color: transparent;
+    will-change: background-position;
+    background-position: 100% 0; /* Movimento do gradiente para dar o efeito */
+}
 /* GERAL */
 
 
@@ -45,8 +140,6 @@
 
 
 header{
-    min-height: 100vh;
-    
     background-image:url(/src/img/bg-header.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -57,16 +150,30 @@ header{
 
 .bg-header{
     display: flex;
-    min-height: 100vh;
-    background-color: rgba(0, 0, 0, 70%);
+    background-color: rgba(0, 0, 0, 0.795);
     background-size: cover;
-    justify-self: center;
     align-self: center;
 }
 
-.text-header{
-    font-size: 19px;
+
+
+@media (min-width: 576px) {
+   
+  }
+  
+  @media (min-width: 768px) {
     
-    text-align: justify;
-    font-weight: lighter;
 }
+
+
+  @media (min-width: 992px) {
+    
+}
+
+@media (min-width: 1200px) {
+    .text-content{
+        font-size: 22px;
+        
+    }
+  }
+  
