--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     color: white;
     font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
+    
 }
 
 @keyframes brilho {
@@ -56,8 +56,7 @@
 }
 
 .headline{
-    font-size: 24px;
-    
+    font-size: 26px;
     font-weight:bold;
 }
 
@@ -155,7 +154,9 @@ header{
     align-self: center;
 }
 
-
+.knowledge-container{
+    align-items:center;
+}
 
 @media (min-width: 576px) {
    
@@ -167,7 +168,13 @@ header{
 
 
   @media (min-width: 992px) {
-    
+    .headline{
+        font-size: 34px;
+    }
+
+    .knowledge-container{
+        align-items:baseline;
+    }
 }
 
 @media (min-width: 1200px) {
