--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,7 +139,7 @@
 
 
 header{
-    background-image:url(/img/bg-header.webp);
+    background-image:url(../img/bg-header.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
