--- a/src/css/style.css
+++ b/src/css/style.css
@@ -163,18 +163,23 @@ header{
     align-items:center;
 }
 
-
 /* contato */
 
 #contact{
     
-    background-image:url(../img/bg-contact.jpeg);
+    background-image:url(../img/bg-contact2.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: fixed;
 
 }
+
+#contact-content{
+    box-shadow: 0px 0px 20px 1px black;
+
+}
+
 
 
 @media (min-width: 576px) {
